@@ -1,7 +1,11 @@
 Darwin Build Scripts Change History
 -----------------------------------
+Release 26 [6-Nov-2011]
+	- darwintrace: preserve DYLD_INSERT_LIBRARIES and DARWINTRACE_LOG
+	- darwintrace: interpose posix_spawn
+
 Release 25 [4-Nov-2011]
-  - darwinup: support for rebuilding xpchelper cache
+	- darwinup: support for rebuilding xpchelper cache
 
 Release 24.1 [17-Jun-2011]
 	- Build fixes for newer compilers
